bat.bool1.nearhundred.NearHundred.scala.error
Erreur de compilation :
NearHundred:7: error: ')' expected but 'return' found.
  } return false
    ^